# Cone

./: .coveragerc  pyproject.toml
super_scad_cone/: SmoothCone.py  SmoothCylinder.py
test/SmoothCone/: SmoothConeTest.py  test_plain_extend_by_eps.expected.scad  test_plain_smooth_cone.expected.scad
test/SmoothCylinder/: SmoothCylinderTest.py  test_hollow_smooth_cylinder.expected.scad  test_plain_cylinder.expected.scad  test_punch.expected.scad
