[tool.poetry]
name = "Super-SCAD-Cone"
version = "0.10.1"
description = "SuperSCAD widgets for cones and cylinders with smooth edges."
authors = ["P.R. Water <p.r.water@setbased.nl>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SuperSCAD/Cone"
documentation = "https://www.superscad.org/"
keywords = ["OpenSCAD", "SuperSCAD", "Cone", "Cylinder"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Code Generators",
]

[tool.poetry.dependencies]
python = "^3.13.0"
super-scad = "^0.11.7"
super-scad-polygon = "^0.9.9"
super-scad-smooth-profile = "^0.6.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.8.0"
super-scad-smooth-profiles = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-common = "poetry.core.masonry.api"
